# jubilant-backports

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yaml  docs.yaml  publish.yaml  tiobe.yaml
docs/: .custom_wordlist.txt  .readthedocs.yaml  conf.py  index.md
docs/.sphinx/: .markdownlint.json  spellingcheck.yaml
docs/explanation/: design-goals.md  index.md
docs/how-to/: index.md  migrate-from-pytest-operator.md
docs/reference/: index.md  jubilant.rst  jubilant_backports.rst  statustypes.rst
docs/tutorial/: getting-started.md
jubilant_backports/: __init__.py  _all_any.py  _juju.py  _task.py  _test_helpers.py  statustypes.py
jubilant_backports.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/integration/: conftest.py  helpers.py  test_config.py  test_deployment.py  test_execution.py  test_machine.py  test_relations.py
tests/integration/charms/testapp/: charmcraft.yaml  pyproject.toml
tests/integration/charms/testapp/src/: charm.py
tests/integration/charms/testdb/: charmcraft.yaml  pyproject.toml
tests/integration/charms/testdb/src/: charm.py
tests/unit/: conftest.py  fake_statuses.py  mocks.py  test_add_secret.py  test_deploy.py  test_exec.py  test_integrate.py  test_juju_class.py  test_refresh.py  test_run.py  test_status.py  test_statustypes.py  test_test_helpers.py
